compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateParams.amy
object Params
  fn foo(i: Int, i: Boolean): Int = { i }
end Params
